--- a/component/address/address-dialog.html
+++ b/component/address/address-dialog.html
@@ -55,7 +55,6 @@
                                 <label class="control-label" for="field_country">Country</label>
                                 <select class="form-control" id="field_country" name="country"
                                         ng-model="vm.address.country" tabindex="7"
-                                        ng-change="vm.onCountryChange()"
                                         ng-options="country as country.name for country in vm.countries track by country.code">
                                     <option value="" disabled hidden>Country...</option>
                                 </select>
@@ -90,7 +89,7 @@
                         <label class="control-label" for="field_state">State</label>
                         <select class="form-control" id="field_state" name="state"
                                 ng-model="vm.address.state" tabindex="5"
-                                ng-options="state as state.name for state in vm.states track by state.code">
+                                ng-options="state as state.name for state in vm.states | filter:{countryCode:vm.address.country.code} track by state.code">
                             <option value="" disabled hidden>State...</option>
                         </select>
                     </div>
