Fixed country reference

--- a/component/address/address-dialog.html
+++ b/component/address/address-dialog.html
@@ -54,7 +54,7 @@
                             <div class="form-group">
                                 <label class="control-label" for="field_country">Country</label>
                                 <select class="form-control" id="field_country" name="country"
-                                        ng-model="vm.address.country" tabindex="7"
+                                        ng-model="vm.address.state.country" tabindex="7"
                                         ng-options="country as country.name for country in vm.countries track by country.code">
                                     <option value="" disabled hidden>Country...</option>
                                 </select>
