Fixed error on Address directive and JSignature

--- a/component/j-signature/j-signature.html
+++ b/component/j-signature/j-signature.html
@@ -1,6 +1,6 @@
 <div id="signature">
     <div id="jSignature"></div>
-    <button class="btn btn-danger" ng-click="reset()">
+    <button type="button" class="btn btn-danger" ng-click="reset()">
         <span class="glyphicon glyphicon-erase"></span>
         <span>Clear</span>
     </button>
