--- a/component/address/address-dialog.html
+++ b/component/address/address-dialog.html
@@ -10,9 +10,9 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label class="control-label" for="field_address">Street</label>
-                    <input type="text" class="form-control" name="address" id="field_address"
-                           ng-model="vm.address.address" placeholder="Street..." tabindex="2"/>
+                    <label class="control-label" for="field_street">Street</label>
+                    <input type="text" class="form-control" name="street" id="field_street"
+                           ng-model="vm.address.street" placeholder="Street..." tabindex="2"/>
                 </div>
             </div>
             <div class="col-md-6">
@@ -26,9 +26,9 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label class="control-label" for="field_address2">Street2</label>
-                    <input type="text" class="form-control" name="address2" id="field_address2"
-                           ng-model="vm.address.address2" placeholder="Street 2..." tabindex="3"/>
+                    <label class="control-label" for="field_street2">Street2</label>
+                    <input type="text" class="form-control" name="street2" id="field_street2"
+                           ng-model="vm.address.street2" placeholder="Street 2..." tabindex="3"/>
                 </div>
             </div>
             <div class="col-md-6">
