--- a/component/address/address.html
+++ b/component/address/address.html
@@ -1,4 +1,4 @@
-<label class="control-label" for="udt-address">Address</label>
+<label class="control-label" for="udt-address">{{label}}</label>
 <div class="input-group">
     <input type="text" class="form-control" name="udt-address" id="udt-address" readonly
     value="{{printName(ngModel)}}">
