--- a/component/forms/common/fields/multi-select.html
+++ b/component/forms/common/fields/multi-select.html
@@ -1,11 +1,11 @@
-<div ng-hide="vm.hideParam(col.field)">
-    <ui-select name="{{col.field.name}}" id="{{col.field.name}}" multiple ng-model="col.field.value"
-               ui-select-required="vm.getRequired(col.field)" close-on-select="true" title="{{col.field.title}}">
-        <ui-select-match placeholder="{{col.field.placeholder}}">
-            {{vm.getSelectTitleField(col.field, $item)}}
+<div ng-hide="vm.hideParam(field)">
+    <ui-select name="{{field.name}}" id="{{field.name}}" multiple ng-model="field.value"
+               ui-select-required="vm.getRequired(field)" close-on-select="true" title="{{field.title}}">
+        <ui-select-match placeholder="{{field.placeholder}}">
+            {{vm.getSelectTitleField(field, $item)}}
         </ui-select-match>
-        <ui-select-choices repeat="element in col.field.data | filter:$select.search | limitTo: col.field.limitTo">
-            <div ng-bind-html="vm.getSelectTitleField(col.field, element) | highlight: $select.search"></div>
+        <ui-select-choices repeat="element in field.data | filter:$select.search | limitTo: field.limitTo">
+            <div ng-bind-html="vm.getSelectTitleField(field, element) | highlight: $select.search"></div>
             <!--<small ng-bind-html="vm.getSelectTitleField(param, element) | highlight: $select.search"></small>-->
             <!--{{vm.getSelectTitleField(param, element)}}-->
         </ui-select-choices>
