--- a/component/forms/common/fields/textarea.html
+++ b/component/forms/common/fields/textarea.html
@@ -1,5 +1,5 @@
-<textarea class="form-control" name="{{col.field.name}}" id="{{col.field.name}}"
-          rows="{{col.field.rows}}" placeholder="{{col.field.placeholder}}"
-          ng-hide="vm.hideParam(col.field)" ng-model="col.field.value"
-          ng-required="vm.getRequired(col.field)">
+<textarea class="form-control" name="{{field.name}}" id="{{field.name}}"
+          rows="{{field.rows}}" placeholder="{{field.placeholder}}"
+          ng-hide="vm.hideParam(field)" ng-model="field.value"
+          ng-required="vm.getRequired(field)">
 </textarea>
