--- a/component/forms/form-builder.html
+++ b/component/forms/form-builder.html
@@ -23,7 +23,7 @@
                 <ods-form schema="schema" on-save="vm.onSave"></ods-form>
             </uib-tab>
             <uib-tab index="3" heading="Form Model" ng-show="debugMode">
-                <ods-model schema="schema"></ods-model>
+                <ods-model model="schema"></ods-model>
             </uib-tab>
         </uib-tabset>
     </div>
