--- a/component/forms/schema/components/section/section-properties.html
+++ b/component/forms/schema/components/section/section-properties.html
@@ -42,15 +42,6 @@
         </form>
     </uib-tab>
     <uib-tab index="3" heading="Debug" ng-show="debugMode">
-        <div class="jsonify padding">
-            <div class="btn-toolbar btn-toolbar-right">
-                <button class="btn btn-default btn-xs" type="button" title="Copy the json data." ng-click="copy()"><span
-                        class="fa fa-clipboard"></span></button>
-                <!--<button class="btn btn-default btn-xs" type="button" title="Display hidden properties."-->
-                <!--ng-click="displayHidden = !displayHidden" ng-class="{ 'active': displayHidden }"><span-->
-                <!--class="fa fa-eye"></span></button>-->
-            </div>
-            <pre>{{modelAsJson}}</pre>
-        </div>
+        <ods-model model="section" css-class="fixed-height"></ods-model>
     </uib-tab>
 </uib-tabset>
