--- a/component/forms/schema/components/text.html
+++ b/component/forms/schema/components/text.html
@@ -1,2 +1,2 @@
-<label class="control-label" for="{{col.field.name}}">{{col.field.label}}</label>
-<input class="form-control" name="{{col.field.name}}" id="{{col.field.name}}"/>
+<label class="control-label" for="{{component.name}}">{{component.label}}</label>
+<input class="form-control" name="{{component.name}}" id="{{component.name}}"/>
