--- a/component/forms/common/fields/text.html
+++ b/component/forms/common/fields/text.html
@@ -1,3 +1,3 @@
-<input class="form-control" name="{{col.field.name}}" id="{{col.field.name}}"
-       ng-hide="vm.hideParam(col.field)" ng-model="col.field.value"
-       ng-required="vm.getRequired(col.field)"/>
+<input class="form-control" name="{{field.name}}" id="{{field.name}}"
+       ng-hide="vm.hideParam(field)" ng-model="field.value"
+       ng-required="vm.getRequired(field)"/>
