--- a/component/forms/common/fields/toggle.html
+++ b/component/forms/common/fields/toggle.html
@@ -1,3 +1,3 @@
-<br ng-if="col.field.ln"/>
-<toggle name="{{col.field.name}}" id="{{col.field.name}}" on="{{col.field.on}}" off="{{col.field.off}}"
+<br ng-if="field.ln"/>
+<toggle name="{{field.name}}" id="{{field.name}}" on="{{field.on}}" off="{{field.off}}"
         ng-model="col.field.value"></toggle>
