--- a/component/forms/style.scss
+++ b/component/forms/style.scss
@@ -10,6 +10,14 @@
 
 //Toolbar section
 
+.toolbar-container {
+  margin-top: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
 .panel-toolbar {
   .panel-body {
     padding: 10px 5px;
@@ -57,6 +65,14 @@
   filter: aplha(opacity(100));
 }
 
+.box-schema .dndDragging {
+  opacity: 0.7;
+}
+
+.box-schema .dndDraggingSource {
+  display: none;
+}
+
 .box-schema ul[dnd-list] {
   margin: 0px;
   min-height: 30px;
@@ -81,22 +97,42 @@
   border-radius: 4px;
 }
 
+.box-row-container {
+  margin-top: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.box-field-container {
+  margin-top: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+  float: left;
+  width: 100%;
+}
+
 .padding {
   padding: 10px;
 }
 
 .box-overlay {
-  /*position: absolute;*/
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-
   /* Needed by IE */
   filter: alpha(opacity=0);
-  background: #FFF;
   background-color: rgba(255, 255, 255, 0.0);
   cursor: move;
+
+  //To delete
+  //z-index: 10;
 }
 
 .box-overlay .btn-toolbar {
@@ -123,21 +159,13 @@
   pointer-events: auto;
 }
 
-.box {
-  margin-top: 10px;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-}
-
-.box-header {
-
-}
-
-.box-title {
-
-}
+//.box-header {
+//
+//}
+//
+//.box-title {
+//
+//}
 
 .box-body {
   padding: 0 10px;
@@ -145,10 +173,11 @@
 
 .box-body li {
   display: block;
-  padding-top: 5px;
-  padding-right: 5px;
-  padding-bottom: 0px;
-  padding-left: 5px;
+  padding: 15px 5px 0px;
+}
+
+.box-footer {
+  padding: 10px;
 }
 
 .box-properties-container.visible {
@@ -170,10 +199,10 @@
 
 .box-row {
   display: block;
-  background-color: #8c8c8c;
+  background-color: lighten(#8c8c8c, 30%);
   padding: 4px;
   line-height: 20px;
-  border: 1px solid #ddd;
+  border: 1px dashed #868686;
 }
 
 .tab-content {
@@ -203,6 +232,11 @@
 
 .jsonify .btn-toolbar-right {
   right: 15px;
+}
+
+.fixed-height {
+  overflow-y: auto;
+  max-height: 350px;
 }
 
 .with-border {
