--- a/component/forms/schema/components/row/row-properties.html
+++ b/component/forms/schema/components/row/row-properties.html
@@ -69,7 +69,7 @@
                                     ng-if="!row.isEditing">
                                 <span class="glyphicon glyphicon-pencil"></span>
                             </button>
-                            <button class="btn btn-danger btn-sm" ng-click="removeColumn($data, $index)"
+                            <button class="btn btn-danger btn-sm" ng-click="removeColumn($index)"
                                     ng-if="!row.isEditing">
                                 <span class="glyphicon glyphicon-trash"></span>
                             </button>
