--- a/component/forms/style.scss
+++ b/component/forms/style.scss
@@ -159,14 +159,6 @@
   pointer-events: auto;
 }
 
-//.box-header {
-//
-//}
-//
-//.box-title {
-//
-//}
-
 .box-body {
   padding: 0 10px;
 }
@@ -174,6 +166,10 @@
 .box-body li {
   display: block;
   padding: 15px 5px 0px;
+}
+
+.box-body ul {
+  padding-top: 5px;
 }
 
 .box-footer {
@@ -245,6 +241,10 @@
 
 .no-padding {
   padding: 0px;
+}
+
+.no-padding-top {
+  padding-top: 0px !important;
 }
 
 .padding-top {
